--- a/modules/platform/nuxeo-retention-core/pom.xml
+++ b/modules/platform/nuxeo-retention-core/pom.xml
@@ -1,13 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.nuxeo.retention</groupId>
-    <artifactId>nuxeo-retention-parent</artifactId>
+    <groupId>org.nuxeo.ecm.platform</groupId>
+    <artifactId>nuxeo-platform-parent</artifactId>
     <version>11.1-SNAPSHOT</version>
   </parent>
+
+  <groupId>org.nuxeo.retention</groupId>
   <artifactId>nuxeo-retention-core</artifactId>
   <name>Nuxeo retention core</name>
   <description>retention core</description>
+
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
