--- a/pom.xml
+++ b/pom.xml
@@ -5075,7 +5075,11 @@
   </dependencyManagement>
 
   <dependencies>
-
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.2</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
