common up to 10.10.1, fix XMap toXml bug.

--- a/nuxeo-common/pom.xml
+++ b/nuxeo-common/pom.xml
@@ -9,6 +9,7 @@
 
   <groupId>org.nuxeo.common</groupId>
   <artifactId>nuxeo-common</artifactId>
+  <version>10.10.1</version>
   <name>Nuxeo Common</name>
   <description>Nuxeo Common: utilities.</description>
 
