--- a/nuxeo-core/nuxeo-core-schema/pom.xml
+++ b/nuxeo-core/nuxeo-core-schema/pom.xml
@@ -57,7 +57,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <target.dir>D:\Tools\Apps\nuxeo-server-10.10-tomcat-aicm\nxserver\bundles</target.dir>
+    <target.dir>D:\Tools\Apps\nuxeo-server-10.10-tomcat-imagelite\nxserver\bundles</target.dir>
   </properties>
 
   <build>
